Fix layout issue

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -38,10 +38,11 @@ button {
 .gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .img-container {
+    flex: 0 0 25%;
     img {
         width: 300px;
         height: 250px;
